# PRISM

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: ablation_alpha_fixed.yaml  ablation_alpha_learned.yaml  ablation_no_pretrain.yaml  ablation_simple_no_pretrain.yaml  ablation_simple_paired.yaml  ablation_simple_unpaired_pretrain.yaml  pll_guided_sampler.yaml  v34_1b_finetune.yaml  v34_1b_noise2_finetune.yaml  v34_1b_noise4_finetune.yaml  v34_pretrain.yaml  v_baseline_finetune.yaml  v_baseline_pretrain.yaml
script/: inference_esm.py  inference_pure_esm_with_logprobs.py  train_esm.py  train_pure_esm.py
script/analyze/1.disentanglement/: extract_baseline_embeddings.py  extract_evo_ab_embeddings.py  extract_residue_embeddings.py  inference_baseline_probe.py  inference_gl_ngl_discrimination.py  inference_linear_probes.py  inference_origin_head.py  merge_sapiens_embeddings.py  plot_linear_probe_results.py  run_linear_probes.sh  score_baseline_on_test_predictions.py  train_probe.py  umap_baseline_single.py  visualize_residue_umap_centered.py
script/analyze/2.pseudo_perplexity/: inference_esm_with_logprobs.py  plot_ppl_comparison.py
script/analyze/3.controllable_generation/: __init__.py  evaluate_dms_binding.py  pll_guided_sampler.py  pll_guided_sampler_baselines.py  rosetta_ddg.py  run_rosetta_interface_ddg.py  run_rosetta_regen_parallel.py  run_rosetta_relax_ddg.py  run_rosetta_stability_regen_parallel.py  train_dms_surrogate.py
script/analyze/4.zero_shot_binding/: benchmark_baselines_cached.py  compute_bottomk_recall.py  compute_topk_recall.py  evaluate_dms_binding.py  evaluate_flab2_baselines.py  evaluate_flab2_binding.py  evaluate_flab2_cached.py  plot_binding_summary.py  plot_bottomk_recall.py  score_flab2_binding_per_variant_baselines.py  score_prism_hf_on_dms.py
script/analyze/5.zero_shot_developability/: benchmark_developability_baselines.py  benchmark_developability_cached.py  benchmark_flab2_dev_cached.py  (+9 more)
script/data/: 1.processing_and_filtering_unpaired_human_OAS_with_ngl_thresholds.py  2.visualize_unpaired_statistics.py  3.filter_by_p90_and_save.py  4.cluster_paired_and_unpaired_antibodies_chunked.py  5.cluster_using_fasta.py  6.deduplicate_clusters.py  7.extract_gene_information.py  8.extract_data_for_probe.py
src/prism/: __init__.py  api.py  io_utils.py  model.py  multimodal_io.py  tokenizer.py  utils.py
(+29 files in other folders)
